--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "mongoose": "^6.5.0",
     "nodemon": "^2.0.19"
   },
   "repository": {
